--- a/movie.css
+++ b/movie.css
@@ -5,7 +5,7 @@
 
 html {
     scroll-behavior: smooth;
-    background-color: rgb(18, 93, 255);
+    background-color: #052a7a;
 }
 
 li {
@@ -14,28 +14,35 @@ li {
 
 a {
     text-decoration: none;
-    background-color: yellow;
-    padding: 12px 24px;
     border-radius: 50px;
     color: black;
     font-weight: bold;
 }
 
 a:hover {
-    text-decoration: underline;
+    cursor: pointer;
 }
 
 nav {
-    
-    background-color: rgb(18, 93, 255);
+    background-color: #001b57;
 }
 
 h3 {
-    font-size: 24px;
+    width: 100%;
+    max-width: 300px;
+    padding: 0 24px 0 24px;
+    color: white;
 }
 
+p {
+    width: 100%;
+    padding: 0 24px 0 24px;
+    color: white;
+}
+
+.click
+
 .container {
-    margin: 0 auto;
     padding: 24px 0;
 }
 
@@ -43,6 +50,12 @@ h3 {
     margin: 0 auto;
     padding: 0 64px;
 }
+
+/* 
+
+NAVIGATION
+
+*/
 
 .nav-container {
     display: flex;
@@ -52,12 +65,47 @@ h3 {
     padding: 24px 64px;
 }
 
+.nav-logo {
+    height: 120px;
+    width: 180px;
+    transition: all 300ms ease;
+}
+
+.nav-logo:hover {
+    opacity: 80%;
+    transition: all 300ms ease;
+}
+
 .nav-links {
     display: flex;
 }
 
 .nav-link {
     margin: 0 12px;
+    background-color: #ffa80e;
+    border-radius: 50px;
+    font-size: 24px;
+    padding: 8px 12px;
+    transition: all 300ms ease;
+}
+
+.nav-link:hover {
+    background-color: #a06f19;
+    transition: all 300ms ease;
+}
+
+/* 
+
+SEARCH
+
+*/
+
+.search-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 48px;
 }
 
 .search {
@@ -72,10 +120,127 @@ h3 {
 .search-input {
     width: 500px;
     padding: 12px;
-    border-radius: 24px;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+    font-size: 24px;
+    background-color: azure;
+    border: none;
+    border-bottom: solid 3px black;
+}
+
+input:hover {
+    cursor: pointer;
+    background-color: lightgray;
+    transition: all 300ms ease;
 }
 
 .search-button {
     position: absolute;
     margin-right: 5px;
+    width: 80px;
+    font-size: 36px;
+    border-radius: 24px;
+    background-color: #052a7a;
+    color: white;
+    border: none;
+    transition: all 300ms ease;
+}
+
+.search-button:hover {
+    cursor: pointer;
+    background-color: #001b57;
+    transition: all 300ms ease;
+}
+
+select {
+    font-size: 20px;
+    width: 100%;
+    max-width: 500px;
+    background-color: azure;
+    border: none;
+    transition: all 300ms ease;
+}
+
+select:hover {
+    cursor: pointer;
+    background-color: lightgray;
+    transition: all 300ms ease;
+}
+
+/* 
+
+MOVIES
+
+*/
+
+.movie-list {
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+}
+
+.movie {
+    width: 25%;
+}
+
+.movie-card {
+    overflow: hidden;
+    text-align: center;
+    background-color: #001b57;
+    margin: 24px;
+}
+
+.movie-card_container {
+    width: 600px;
+}
+
+.movie-poster {
+    width: 80%;
+    margin: 24px 24px 0 24px;
+}
+
+/* 
+
+FOOTER
+
+*/
+
+.footer-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 48px 24px;
+    padding: 0 64px;
+}
+
+.footer-img {
+    height: 120px;
+    width: 180px;
+    transition: all 300ms ease;
+}
+
+.footer-img:hover {
+    opacity: 80%;
+    transition: all 300ms ease;
+}
+
+.footer-copyright {
+    text-align: center;
+}
+
+.footer-github {
+    width: 180px;
+}
+
+.fa-brands {
+    font-size: 24px;
+    transition: all 300ms ease;
+}
+
+.fa-brands:hover {
+    color: white;
+    transition: all 300ms ease;
 }
